# parallelCompute

./: .gitignore  CMakeLists.txt  README.md  main.c  main.h  serialCodeWithAnnotation.c  shell.sh
results/: result-uniformvector-2dim-5h.txt  screen-uniformvector-2dim-5h.txt
